# MA2003B-Reto

./: .gitignore  README.md  pyproject.toml
datos/: ~$DATOS HISTÓRICOS 2023_2024_TODAS ESTACIONES_ITESM.xlsx
notebooks/: nb1.ipynb
